--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <link rel="alternate" type="application/rss+xml" title="asiaservice.co &raquo; Feed" href="feed/" />
 <link rel="alternate" type="application/rss+xml" title="asiaservice.co &raquo; Comments Feed" href="comments/feed/" />
 <link rel="alternate" type="application/rss+xml" title="asiaservice.co &raquo; Home Comments Feed" href="home-2/feed/" />
-<link rel='stylesheet' id='contact-form-7-css'  href='https://raw.githubusercontent.com/AsiaServiceco/asiafoundry/master/css/styles.css' type='text/css' media='all' />
-<link rel='stylesheet' id='font-awesome-four-css'  href='https://raw.githubusercontent.com/AsiaServiceco/asiafoundry/master/css/font-awesome.min.css' type='text/css' media='all' />
+<link rel='stylesheet' id='contact-form-7-css'  href='css/styles.css' type='text/css' media='all' />
+<link rel='stylesheet' id='font-awesome-four-css'  href='css/font-awesome.min.css' type='text/css' media='all' />
 <link rel='stylesheet' id='google-fonts-css'  href='http://fonts.googleapis.com/css?family=Raleway%3A400%2C700%2C300%7COpen+Sans%3A200%2C400%2C300%2C700' type='text/css' media='all' />
 <link rel='stylesheet' id='wd_header_google_fonts-css'  href='http://fonts.googleapis.com/css?family=default' type='text/css' media='all' />
-<link rel='stylesheet' id='foundation-css'  href='https://raw.githubusercontent.com/AsiaServiceco/asiafoundry/master/css/foundation.css' type='text/css' media='all' />
-<link rel='stylesheet' id='style-tita-css'  href='https://raw.githubusercontent.com/AsiaServiceco/asiafoundry/master/css/style.css' type='text/css' media='all' />
+<link rel='stylesheet' id='foundation-css'  href='css/foundation.css' type='text/css' media='all' />
+<link rel='stylesheet' id='style-tita-css'  href='css/style.css' type='text/css' media='all' />
 <style type='text/css'>
 article.node-blog,
                     article.post,
@@ -175,14 +175,14 @@ article.node-blog,
             color : black;
           } 
 </style>
-<link rel='stylesheet' id='blocks-css'  href='https://raw.githubusercontent.com/AsiaServiceco/asiafoundry/master/css/block.css' type='text/css' media='all' />
-<link rel='stylesheet' id='slider-css'  href='https://raw.githubusercontent.com/AsiaServiceco/asiafoundry/master/css/slider.css' type='text/css' media='all' />
-<link rel='stylesheet' id='reponsive-css'  href='https://raw.githubusercontent.com/AsiaServiceco/asiafoundry/master/css/responsive.css' type='text/css' media='all' />
-<link rel='stylesheet' id='animate-custom-css'  href='https://raw.githubusercontent.com/AsiaServiceco/asiafoundry/master/css/animate-custom.css' type='text/css' media='all' />
-<link rel='stylesheet' id='vegas-css'  href='https://raw.githubusercontent.com/AsiaServiceco/asiafoundry/master/css/jquery.vegas.css' type='text/css' media='all' />
-<link rel='stylesheet' id='animations-css'  href='https://raw.githubusercontent.com/AsiaServiceco/asiafoundry/master/css/animations.css' type='text/css' media='all' />
-<link rel='stylesheet' id='superslides-css'  href='https://raw.githubusercontent.com/AsiaServiceco/asiafoundry/master/css/superslides.css' type='text/css' media='all' />
-<link rel='stylesheet' id='responsiveslides-css'  href='https://raw.githubusercontent.com/AsiaServiceco/asiafoundry/master/css/responsiveslides.css' type='text/css' media='all' />
+<link rel='stylesheet' id='blocks-css'  href='css/block.css' type='text/css' media='all' />
+<link rel='stylesheet' id='slider-css'  href='css/slider.css' type='text/css' media='all' />
+<link rel='stylesheet' id='reponsive-css'  href='css/responsive.css' type='text/css' media='all' />
+<link rel='stylesheet' id='animate-custom-css'  href='css/animate-custom.css' type='text/css' media='all' />
+<link rel='stylesheet' id='vegas-css'  href='css/jquery.vegas.css' type='text/css' media='all' />
+<link rel='stylesheet' id='animations-css'  href='css/animations.css' type='text/css' media='all' />
+<link rel='stylesheet' id='superslides-css'  href='css/superslides.css' type='text/css' media='all' />
+<link rel='stylesheet' id='responsiveslides-css'  href='css/responsiveslides.css' type='text/css' media='all' />
 <link rel='stylesheet' id='woocommerce-css'  href='css/woocommerce.css' type='text/css' media='all' />
 <script type='text/javascript' src='js/jquery/jquery.js'></script>
 <script type='text/javascript' src='js/jquery/jquery-migrate.min.js'></script>
@@ -406,9 +406,9 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
 </td>
 <td>
 <ul>
-<li><img src="https://raw.githubusercontent.com/AsiaServiceco/asiafoundry/master/image/Palm01.png" alt="palm oil mill spareparts"/><img src="image/Palm02.png" alt="palm oil mill spareparts" /></li>
-<li><img src="https://raw.githubusercontent.com/AsiaServiceco/asiafoundry/master/image/Palm03.png" alt="palm oil mill spareparts" /><img src="https://raw.githubusercontent.com/AsiaServiceco/asiafoundry/master/image/Palm04.png" alt="palm oil mill spareparts" /></li>
-<li><img src="https://raw.githubusercontent.com/AsiaServiceco/asiafoundry/master/image/Palm05.png" alt="palm oil mill spareparts" /></li>
+<li><img src="image/Palm01.png" alt="palm oil mill spareparts"/><img src="image/Palm02.png" alt="palm oil mill spareparts" /></li>
+<li><img src="image/Palm03.png" alt="palm oil mill spareparts" /><img src="image/Palm04.png" alt="palm oil mill spareparts" /></li>
+<li><img src="image/Palm05.png" alt="palm oil mill spareparts" /></li>
 </li>
 </ul>
 </tr>
