--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
  <script type='text/javascript' src='js/jquery.form.min.js'></script>
 <script type='text/javascript'>
 /* <![CDATA[ */
-var _wpcf7 = {"loaderUrl":"https:\/image\/ajax-loader.gif","sending":"Sending ...","cached":"1"};
+var _wpcf7 = {"loaderUrl":"https:image\/ajax-loader.gif","sending":"Sending ...","cached":"1"};
 /* ]]> */
 </script>
 <script type='text/javascript' src='js/contact/scripts.js'></script>
