--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
     <div class="meny">
       <h1>
                 <a href=" #Home" title="Home" rel="home" id="logo" alt="asiaservice.co"> 
-          <img src="../image/log.png" alt="AsiaService.co Home" />
+          <img src="image/log.png" alt="AsiaService.co Home" />
         </a>
                
              </h1>
