--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ article.node-blog,
 <script type='text/javascript' src='js/modernizr.custom.js'></script>
 <script type='text/javascript' src='js/foundation/foundation.min.js'></script>
 <script type='text/javascript' src='js/foundation/foundation.abide.js'></script>
-<script type='text/javascript' src='responsiveslides.js'></script>
+<script type='text/javascript' src='js/responsiveslides.js'></script>
 <script type='text/javascript' src='js/jquery.inview.js'></script>
 <script type='text/javascript' src='js/jquery.vegas.js'></script>
 <script type='text/javascript' src='js/meny.min.js'></script>
