--- a/index.html
+++ b/index.html
@@ -640,7 +640,8 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
     </div>
 <div class="large-6 columns p-all-0"><div class="wpcf7" id="wpcf7-f1977-o1" lang="en-US" dir="ltr">
 <div class="screen-reader-response"></div>
-<form name="" action="/page/demo-3/#wpcf7-f1977-o1" method="post" class="wpcf7-form" novalidate="novalidate">
+<form action="//asiaservice.us13.list-manage.com/subscribe/post?u=871a9a1621ca82cd87a7c8188&amp;id=7dab80bc06" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
 <div style="display: none;">
 <input type="hidden" name="_wpcf7" value="1977" />
 <input type="hidden" name="_wpcf7_version" value="4.0" />
@@ -656,7 +657,10 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
     <span class="wpcf7-form-control-wrap your-subject"><input type="text" name="your-subject" value="" size="40" class="wpcf7-form-control wpcf7-text" aria-invalid="false" /></span> </p>
 <p>Your Message<br />
     <span class="wpcf7-form-control-wrap your-message"><textarea name="your-message" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea" aria-invalid="false"></textarea></span> </p>
-<p><input type="submit" value="Send" class="wpcf7-form-control wpcf7-submit" /></p>
+<p> <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_871a9a1621ca82cd87a7c8188_7dab80bc06" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="Say Hi" id="mc-embedded-subscribe" class="button"></div>
+    </div></p>
 <div class="wpcf7-response-output wpcf7-display-none"></div></form></div></div>
 </div>
 
