--- a/index.html
+++ b/index.html
@@ -638,39 +638,48 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
     
 
     </div>
-<div class="large-6 columns p-all-0"><div class="wpcf7" id="wpcf7-f1977-o1" lang="en-US" dir="ltr">
-<div class="screen-reader-response"></div>
+<!-- Begin MailChimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+<div id="mc_embed_signup">
 <form action="//asiaservice.us13.list-manage.com/subscribe/post?u=871a9a1621ca82cd87a7c8188&amp;id=7dab80bc06" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-<div style="display: none;">
-<input type="hidden" name="_wpcf7" value="1977" />
-<input type="hidden" name="_wpcf7_version" value="4.0" />
-<input type="hidden" name="_wpcf7_locale" value="en_US" />
-<input type="hidden" name="_wpcf7_unit_tag" value="wpcf7-f1977-o1" />
-<input type="hidden" name="_wpnonce" value="3eb009c64f" />
+	<h2>Contact Us </h2>
+<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+<div class="mc-field-group">
+	<label for="mce-FNAME">First Name </label>
+	<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
 </div>
-<p>Your Name (required)<br />
-    <span class="wpcf7-form-control-wrap your-name"><input type="text" name="your-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" /></span> </p>
-<p>Your Email (required)<br />
-    <span class="wpcf7-form-control-wrap your-email"><input type="email" name="your-email" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email" aria-required="true" aria-invalid="false" /></span> </p>
-<p>Subject<br />
-    <span class="wpcf7-form-control-wrap your-subject"><input type="text" name="your-subject" value="" size="40" class="wpcf7-form-control wpcf7-text" aria-invalid="false" /></span> </p>
-<p>Your Message<br />
-    <span class="wpcf7-form-control-wrap your-message"><textarea name="your-message" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea" aria-invalid="false"></textarea></span> </p>
-<p> <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+<div class="mc-field-group">
+	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+</label>
+	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+</div>
+<div class="mc-field-group">
+	<label for="mce-MMERGE2">Subject  <span class="asterisk">*</span>
+</label>
+	<input type="text" value="" name="MMERGE2" class="required" id="mce-MMERGE2">
+</div>
+<div class="mc-field-group">
+	<label for="mce-MMERGE3">Message  <span class="asterisk">*</span>
+</label>
+	<input type="text" value="" name="MMERGE3" class="required" id="mce-MMERGE3">
+</div>
+	<div id="mce-responses" class="clear">
+		<div class="response" id="mce-error-response" style="display:none"></div>
+		<div class="response" id="mce-success-response" style="display:none"></div>
+	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_871a9a1621ca82cd87a7c8188_7dab80bc06" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="Say Hi" id="mc-embedded-subscribe" class="button"></div>
-    </div></p>
-<div class="wpcf7-response-output wpcf7-display-none"></div></form></div></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
 </div>
-
-          </section></div>  
- <script type='text/javascript' src='js/jquery.form.min.js'></script>
-<script type='text/javascript'>
-/* <![CDATA[ */
-var _wpcf7 = {"loaderUrl":"https:image\/ajax-loader.gif","sending":"Sending ...","cached":"1"};
-/* ]]> */
-</script>
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[0]='EMAIL';ftypes[0]='email';fnames[2]='MMERGE2';ftypes[2]='text';fnames[3]='MMERGE3';ftypes[3]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<!--End mc_embed_signup-->
 <script type='text/javascript' src='js/contact/scripts.js'></script>
 <script type='text/javascript' src='js/comment-reply.min.js'></script>
 <script type='text/javascript' src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script>
