--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
 <div id="mc_embed_signup">
 <form action="//asiaservice.us13.list-manage.com/subscribe/post?u=871a9a1621ca82cd87a7c8188&amp;id=7dab80bc06" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-	<h2>Contact Us </h2>
+	<h2>Subscribe to our mailing list</h2>
 <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
 <div class="mc-field-group">
 	<label for="mce-FNAME">First Name </label>
@@ -678,7 +678,7 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
     </div>
 </form>
 </div>
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[0]='EMAIL';ftypes[0]='email';fnames[2]='MMERGE2';ftypes[2]='text';fnames[3]='MMERGE3';ftypes[3]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+
 <!--End mc_embed_signup-->
 <script type='text/javascript' src='js/contact/scripts.js'></script>
 <script type='text/javascript' src='js/comment-reply.min.js'></script>
