--- a/index.html
+++ b/index.html
@@ -645,6 +645,13 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
 	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
 	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 </style>
+<!-- Begin MailChimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
 <div id="mc_embed_signup">
 <form action="//asiaservice.us13.list-manage.com/subscribe/post?u=871a9a1621ca82cd87a7c8188&amp;id=7dab80bc06" 
 
@@ -679,7 +686,7 @@ novalidate>
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot 
 
 signups-->
-    <div style="position: absolute; right: -500px;" aria-hidden="true"><input type="text" 
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" 
 
 name="b_871a9a1621ca82cd87a7c8188_7dab80bc06" tabindex="-1" value=""></div>
     <div class="clear"><input type="submit" value="Subscribe" name="Say Hi" id="mc-embedded-subscribe" 
