--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
     </div>
 <!-- Begin MailChimp Signup Form -->
 <!-- Change the width and height values to suit you best -->
-<div style="padding-left: 50%>
+<div style="padding-right: 50%>
 <div class="typeform-widget" data-url="https://lither.typeform.com/to/Kr93Py" data-text="Contact Form" style="width:50%;height:500px;"></div></div>
 <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
 <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px; float: right"><a href="https://www.typeform.com/examples/forms/?utm_campaign=Kr93Py&amp;utm_source=typeform.com-3161071-Basic&amp;utm_medium=typeform&amp;utm_content=typeform-embedded-onlineform&amp;utm_term=EN" style="color: #999" target="_blank">Online form</a> powered by Typeform</div>
