--- a/index.html
+++ b/index.html
@@ -647,4 +647,13 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
 <script type='text/javascript' src='js/comment-reply.min.js'></script>
 <script type='text/javascript' src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script>
 <script type="text/javascript" src="https://www.blogger.com/static/v1/common/js/845978816-csitail.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-78192833-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
