--- a/index.html
+++ b/index.html
@@ -234,16 +234,16 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
       
       <ul class="social-icons inline-list">
       	                                     <li class="linkedin">
-          <a target="_blank" href="https://www.linkedin.com"><i class="fa fa-linkedin"></i></a>
+          <a target="_blank" href="https://www.linkedin.com/company/asiaservice/"><i class="fa-linkedin"></i></a>
         </li>
                          <li class="youtube">
-          <a target="_blank" href="https://www.youtube.com"><i class="fa fa-youtube"></i></a>
+          <a target="_blank" href="https://www.youtube.com"><i class="fa-youtube"></i></a>
         </li>
                          <li class="flickr">
-          <a target="_blank" href="https://www.flickr.com"><i class="fa fa-flickr"></i></a>
+          <a target="_blank" href="https://www.flickr.com"><i class="fa-flickr"></i></a>
         </li>
                                   <li class="pinterest">
-          <a target="_blank" href="https://www.pinterest.com"><i class="fa fa-pinterest"></i></a>
+          <a target="_blank" href="https://www.pinterest.com"><i class="fa-pinterest"></i></a>
         </li>
                                   
       </ul>
