--- a/index.html
+++ b/index.html
@@ -640,9 +640,23 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
         data-decription="<h4>Marketing Office</h4> Asia 212 D Medan ,Sumatera Utara 20214 <p> Phone: +62-61-7366885</p>">
       </div>
     </div>
-    
-
-    </div>
+	 </div>
+	<!-- WhatsHelp.io widget -->
+<script type="text/javascript">
+    (function () {
+        var options = {
+            whatsapp: "+628126312188", // WhatsApp number
+            call_to_action: "Message us", // Call to action
+            position: "right", // Position may be 'right' or 'left'
+        };
+        var proto = document.location.protocol, host = "whatshelp.io", url = proto + "//static." + host;
+        var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/widget-send-button/js/init.js';
+        s.onload = function () { WhWidgetSendButton.init(host, proto, options); };
+        var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
+    })();
+</script>
+<!-- /WhatsHelp.io widget -->
+	</Body>
 
 <script type='text/javascript' src='js/contact/scripts.js'></script>
 <script type='text/javascript' src='js/comment-reply.min.js'></script>
