--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
 </script>
 <!-- /WhatsHelp.io widget -->
 
-	<iframe width="1" height="1" wmode="transparent" src="//www.youtube.com/embed/VIDEO_ID?autoplay=1&loop=1&playlist=bM7SZ5SBzyY" frameborder="0" allowfullscreen>
+	<iframe width="1" height="1" wmode="transparent" src="//www.youtube.com/embed/VIDEO_ID?autoplay=1&loop=1&playlist=bM7SZ5SBzyY" frameborder="0" allowfullscreen></iframe>
 	</Body>
 
 <script type='text/javascript' src='js/contact/scripts.js'></script>
