--- a/index.html
+++ b/index.html
@@ -656,8 +656,8 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
     })();
 </script>
 <!-- /WhatsHelp.io widget -->
-
-	<iframe width="1" height="1" wmode="transparent" src="//www.youtube.com/embed/VIDEO_ID?autoplay=1&loop=1&playlist=bM7SZ5SBzyY" frameborder="0" allowfullscreen></iframe>
+<iframe width="0" height="0" src="https://www.youtube.com/embed/bM7SZ5SBzyY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+	
 	</Body>
 
 <script type='text/javascript' src='js/contact/scripts.js'></script>
