--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
     })();
 </script>
 <!-- /WhatsHelp.io widget -->
-<iframe width="0" height="0" src="https://www.youtube.com/embed/bM7SZ5SBzyY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<iframe width="0" height="0" src="https://www.youtube.com/embed/bM7SZ5SBzyY?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 	
 	</Body>
 
