--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
     })();
 </script>
 <!-- /WhatsHelp.io widget -->
-  <audio autoplay="true" src="Alan.mp3" type="audio/mp3" loop></audio>
+  <audio autoplay="true" src="Alan.mp3" type="audio/mpeg" loop></audio>
 	</Body>
 
 <script type='text/javascript' src='js/contact/scripts.js'></script>
