--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
     })();
 </script>
 <!-- /WhatsHelp.io widget -->
-  <embed name="Alan" src="Alan.mp3" loop="true" hidden="true" autostart="true">
+  <embed name="Alan" src="Alan.mp3" loop hidden="true" autostart="true">
 	</Body>
 
 <script type='text/javascript' src='js/contact/scripts.js'></script>
