--- a/index.html
+++ b/index.html
@@ -661,7 +661,8 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
 
 <script type='text/javascript' src='js/contact/scripts.js'></script>
 <script type='text/javascript' src='js/comment-reply.min.js'></script>
-<script type='text/javascript' src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script>
+<script type='text/javascript' src='https://maps.googleapis.com/maps/api/js?key=AIzaSyC-djR_E7jEjTems24jmxv3SGOmBXwZvZ4&callback=initMap"
+    async defer'></script>
 <script type="text/javascript" src="https://www.blogger.com/static/v1/common/js/845978816-csitail.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
