--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
     })();
 </script>
 <!-- /WhatsHelp.io widget -->
-  
+  <iframe>https://www.google.com/maps/place/Asia+Service/@3.585927,98.6925793,17z/data=!3m1!4b1!4m5!3m4!1s0x303131a998c5700d:0x68f780f4b65adef!8m2!3d3.585927!4d98.694768?hl=en-US</iframe>
 	</Body>
 
 <script type='text/javascript' src='js/contact/scripts.js'></script>
