--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <meta name="keywords" content="Palm Oil machinery,foundry,machinery,asian machinery,Indonesia Foundry,Foundry manufacturer,Crumb Rubber,Boiler Manufacturer,Quarry,machine sparepart,marine anchor" />
 
     <link rel="alternate" type="application/rss+xml" title="asiaservice.co &raquo; Feed" href="feed/" />
+	  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link rel="alternate" type="application/rss+xml" title="asiaservice.co &raquo; Comments Feed" href="comments/feed/" />
 <link rel="alternate" type="application/rss+xml" title="asiaservice.co &raquo; Home Comments Feed" href="home-2/feed/" />
 <link rel='stylesheet' id='contact-form-7-css'  href='css/styles.css' type='text/css' media='all' />
@@ -220,7 +221,7 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
 </head>
   <body class="home page page-id-50 page-template page-template-page-templatefront-page-php html  page-node menu-1 menu-offcanvas">
     
-    <a class="show-menu show-meny"><i class="fa fa-bars back"></i><span>Menu</span></a>
+    <a class="show-menu show-meny"><i class="small material-icons">assignment</i><span>Menu</span></a>
     <div class="meny">
       <h1>
                 <a href=" #Home" title="Home" rel="home" id="logo" alt="asiaservice.co"> 
