--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
 
 
       <nav class="menu-all-pages-container"><ul id="menu-all-pages" class="menu-list">
-<li><a href="#Home" Alt="Home of Asiaservice.co"><i class="fa-home fa color--50  "></i>Home</a></li><li><a href="#About" alt="About AsiaService.co"><i class="fa-check fa color--1799  "></i>About</a></li><li><a href="#Facilities" alt="Facilities of Asiaservice.co"><i class="fa-puzzle-piece fa color--38  "></i>Facilities</a></li><li><a href="#Product" alt="Product of AsiaService.co"><i class="fa-gear fa color--1800  "></i>Product</a></li><li><a href="#Contactus" alt="Contact AsiaService.co"><i class="fa-envelope-o fa color--1797  "></i>Contact us</a></li></ul></nav>    
+<li><a href="#Home" Alt="Home of Asiaservice.co"><i class="small material-icons">account_balance</i>Home</a></li><li><a href="#About" alt="About AsiaService.co"><i class="small material-icons">class</i>About</a></li><li><a href="#Facilities" alt="Facilities of Asiaservice.co"><i class="small material-icons">change_history</i>Facilities</a></li><li><a href="#Product" alt="Product of AsiaService.co"><i class="small material-icons">business</i>Product</a></li><li><a href="#Contactus" alt="Contact AsiaService.co"><i class="small material-icons">local_phone</i>Contact us</a></li></ul></nav>    
       
       <ul class="social-icons inline-list">
       	                                     <li class="linkedin">
