--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <link rel="alternate" type="application/rss+xml" title="asiaservice.co &raquo; Home Comments Feed" href="home-2/feed/" />
 <link rel='stylesheet' id='contact-form-7-css'  href='css/styles.css' type='text/css' media='all' />
 <link rel='stylesheet' id='font-awesome-four-css'  href='css/font-awesome.min.css' type='text/css' media='all' />
+	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel='stylesheet' id='google-fonts-css'  href='http://fonts.googleapis.com/css?family=Raleway%3A400%2C700%2C300%7COpen+Sans%3A200%2C400%2C300%2C700' type='text/css' media='all' />
 <link rel='stylesheet' id='wd_header_google_fonts-css'  href='http://fonts.googleapis.com/css?family=default' type='text/css' media='all' />
 <link rel='stylesheet' id='foundation-css'  href='css/foundation.css' type='text/css' media='all' />
