--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
           <a target="_blank" href="https://www.linkedin.com/company/asiaservice/"><i class="fa fa-linkedin"></i></a>
         </li>
                          <li class="youtube">
-          <a target="_blank" href="https://www.youtube.com"><i class="fa fa-youtube"></i></a>
+          <a target="_blank" href="https://www.youtube.com/channel/UCE9CDYEJD2EWnSm3Eho6JSQ"><i class="fa fa-youtube"></i></a>
         </li>
                          <li class="flickr">
           <a target="_blank" href="https://www.flickr.com"><i class="fa fa-flickr"></i></a>
