--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
                 <h2 class="section-title">Contact us</h2><div class="space"></div>
 		      
               </div>
-	<img src = "map.png"/>
+	<img src = "image/maps.png"/>
             </div>
           
 
