--- a/index.html
+++ b/index.html
@@ -628,10 +628,10 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
           </section><section class="page-section Contactus-page page-section-1797"><div class="row menu-row">    
               <div class="large-12 large-centered  text-center columns">
                 <h2 class="section-title">Contact us</h2><div class="space"></div>
-		      
-              </div>
-	<img src = "image/maps.png"/>
+		</div>
+	
             </div>
+	<div><img src = "image/maps.png"/></div>
           
 
 	<!-- WhatsHelp.io widget -->
