--- a/index.html
+++ b/index.html
@@ -631,7 +631,8 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
 		</div>
 	
             </div>
-	<div><img src = "image/maps.png"/></div>
+	<div>
+		<tbody><tr><td><img src = "image/maps.png"/></tbody></tr></td></div>
           
 
 	<!-- WhatsHelp.io widget -->
