--- a/index.html
+++ b/index.html
@@ -624,10 +624,7 @@ var themeParams = {"pageTransition":"58","MenuStyle":"offcanvas"};
 	
             </div>
 	<div>
-		<div class="mapouter">
-			<div class="gmap_canvas">
-				<iframe width="1080" height="750" id="gmap_canvas" src="https://maps.google.com/maps?q=asia%20service&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.pureblack.de">webdesigner</a></div><style>.mapouter{text-align:right;height:750px;width:1080px;}.gmap_canvas {overflow:hidden;background:none!important;height:750px;width:1080px;}</style></div>
-          
+		<div class="mapouter"><div class="gmap_canvas"><iframe width="1069" height="1080" id="gmap_canvas" src="https://maps.google.com/maps?q=asia%20service%20jl.asia&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://ytify.com"></a></div><style>.mapouter{position:relative;text-align:right;height:1080px;width:1069px;}.gmap_canvas {overflow:hidden;background:none!important;height:1080px;width:1069px;}</style></div>
 
 	
   
